--- a/src/app/main-content/portfolio/portfolio.component.scss
+++ b/src/app/main-content/portfolio/portfolio.component.scss
@@ -5,22 +5,20 @@
 
 section {
   @include padding();
-  // padding: $p;
   @include fontH(
     $font_size: $f_body_8,
     $font_weight: $f_w_small,
-    $f_media: $f_body_8,
-    // $f_media_small: $f_body_7
+    $f_media: $f_body_8
   );
   // border: 2px solid blue;
   display: grid;
   grid-template-rows: 1fr;
-
   .container_img_shadows {
     grid-row: 3 /4;
     overflow: visible;
     position: relative;
     @include layers(0);
+    margin-left: -200px;
     .img {
       height: 636px;
       width: 748px;
@@ -32,9 +30,7 @@ section {
 
 .header {
   display: grid;
-  // grid-template-columns: 100px auto 507px;
   grid-template-columns: minmax(24px, 100px) 1fr minmax(100px, 507px);
-  // display: flex;
   align-items: center;
   justify-content: end;
 
@@ -45,24 +41,19 @@ section {
     @include fontH();
   }
   .description {
-    // grid-row: 2 / 3;
     grid-column: 1/4;
   }
 }
 
 .container_project {
-  // .container_item {
   display: grid;
   grid-template-columns: 50% 50%;
   @include layers(1);
-  // @include gridCandRows(auto auto);
   display: flex;
   .container_img_project {
-    // padding: $p;
     grid-column: 1 /2;
     img {
       width: 620px;
-      // height: 340px;
       height: auto;
       @include maxW($max_w: 700px);
     }
@@ -73,11 +64,7 @@ section {
     flex-direction: column;
     justify-content: center;
     .head {
-      @include fontH(
-        $font_size: $f_body_2,
-        // $font_weight: f_w_big,
-        $f_media: $f_body_2
-      );
+      @include fontH($font_size: $f_body_2, $f_media: $f_body_2);
     }
     .skill {
       @include fontH(
@@ -120,8 +107,6 @@ section {
 
 .container_item.reverse {
   .container_project {
-    // display: flex;
-    // flex-direction: row-reverse;
     .container_text_project {
       grid-column: 1 /2;
       grid-row: 1 / 2;
