--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,40 +27,29 @@ $p-media: 0px 25px 0px 25px;
   box-sizing: border-box;
 }
 
+html,
+body {
+  overflow-x: hidden;
+  // overflow: hidden;
+}
+
 body {
   margin: 0 auto;
   border: 0;
   padding: 0;
   background-color: $blue;
   color: $white;
-  // color: red;
   font-family: "Poppins";
-  overflow-x: hidden;
+
   scroll-behavior: smooth;
   text-decoration: none;
   box-sizing: border-box;
 }
 
-// @mixin fontH() {
-//   font-size: 90px;
-//   font-weight: 700;
-// }
+body::-webkit-scrollbar {
+  display: none;
+}
 
-// /* poppins-regular - latin */
-// @font-face {
-//   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-//   font-family: "Poppins";
-//   font-style: normal;
-//   font-weight: 400;
-//   src: url("./../public/assets/fonts/poppins-v22-latin-regular.woff2")
-//     format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-// }
-// /* poppins-700 - latin */
-// @font-face {
-//   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-//   font-family: "Poppins";
-//   font-style: normal;
-//   font-weight: 700;
-//   src: url("./../public/assets/fonts/poppins-v22-latin-700.woff2")
-//     format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-// }
+body {
+  scrollbar-width: none;
+}
